fix overflowing text adn resize property

--- a/src/static/style.css
+++ b/src/static/style.css
@@ -45,6 +45,7 @@
     height: auto;
     min-height:200px;
     background-color: white;
+    display: flex;
 }
 
 .spacer {
@@ -82,13 +83,18 @@
     flex-direction: row;
     height: auto;
     min-height: 200px;
-
 }
 
 .text {
     width: 100%;
+    height: 100%;
+    min-height: 200px;
     vertical-align: text-top;
     /* height: 200px; */
+}
+
+textarea  {
+    resize: none;
 }
 
 Button {
